# ogis-cxxloop-examples

./: .gitignore  CMakeLists.txt  README.md  ogis-modern-cxx-future-cpp.pro  ogis-modern-cxx-future-cpp.sln  the_existing_compounds.md  the_full_implementation.md  the_full_syntax.md
cxxloop/: CMakeLists.txt
cxxloop.alternatives/: CMakeLists.txt
cxxloop.alternatives/std-view-iota/: CMakeLists.txt  view-iota.cpp
cxxloop.examples/: CMakeLists.txt  INSTALL.txt  README.md  asciiart.hpp
cxxloop.examples/cxxloop-godbolt.examples/: CMakeLists.txt  README.md  ogis-loop-godbolt-example.cpp
cxxloop.examples/cxxloop.examples/: CMakeLists.txt  README.md
cxxloop.examples/cxxloop.examples/asciishapes/: CMakeLists.txt  README.md
cxxloop.examples/cxxloop.examples/asciishapes/using-for/: CMakeLists.txt  asciishapes_using_for.cpp  main.cpp
cxxloop.examples/cxxloop.examples/asciishapes/using-loop/: CMakeLists.txt  asciishapes_using_loop.cpp  main.cpp
cxxloop.examples/cxxloop.examples/asciishapes/using-loop-postops/: CMakeLists.txt  asciishapes_using_loop_postops.cpp  asciishapes_using_loop_postops.hpp  main.cpp
cxxloop.examples/cxxloop.examples/matrix/: README.md  main_matrix.cpp  matrix.hpp  matrix_io.hpp
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop/: test_cxxloop.cpp
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop3/: CMakeLists.txt  test_cxxloop3.cpp
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop_macros/: CMakeLists.txt
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop_macros_postops/: CMakeLists.txt  test_cxxloop_macros_postops.cpp
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop_postops/: CMakeLists.txt
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop_templates/: test_cxxloop_templates.cpp
cxxloop.examples/cxxloop.examples/testing-loops/test_cxxloop_type_traits/: CMakeLists.txt  test_cxxloop-type-traits.cpp
cxxloop.examples/ogis-cxxloop.examples/: README.md
cxxloop.examples/ogis-cxxloop.examples/asciishapes/: CMakeLists.txt
cxxloop.examples/ogis-cxxloop.examples/asciishapes/using-for/: asciishapes_using_for.hpp
cxxloop.examples/ogis-cxxloop.examples/asciishapes/using-loop/: asciishapes_using_loop.hpp
cxxloop.examples/ogis-cxxloop.examples/matrix/: CMakeLists.txt  README.md  matrix.hpp
cxxloop.examples/ogis-cxxloop.examples/testing-loops/: CMakeLists.txt  macro.h  main.cpp
cxxloop.examples/ogis-cxxloop.examples/testing-loops/test_cxxloop_postops/: test_cxxloop_postops.cpp
cxxloop.examples/ogis-cxxloop.examples/testing-loops/test_cxxloop_typed/: CMakeLists.txt
cxxloop.src/: CMakeLists.txt
cxxloop.src/include/: cxxloop_postops.h  cxxloop_prereqs.h
cxxloop.tests/: CMakeLists.txt
cxxloop.tests/testing-loops/: CMakeLists.txt  macro.h
cxxloop.tests/testing-loops/test_cxxloop/: CMakeLists.txt
cxxloop.tests/testing-loops/test_cxxloop_macros/: test_cxxloop_macros.cpp
cxxloop.tests/testing-loops/test_cxxloop_macros_postops/: test_cxxloop_macros_postops.cpp
cxxloop.tests/testing-loops/test_cxxloop_postops/: test_cxxloop_postops.cpp
cxxloop.tests/testing-loops/test_cxxloop_slice/: CMakeLists.txt  test_cxxloop_slice.cpp
cxxloop.tests/testing-loops/test_cxxloop_templates/: test_cxxloop_templates.cpp
cxxloop.tests/testing-loops/test_cxxloop_templates_postops/: CMakeLists.txt  test_cxxloop_templates_postops.cpp
cxxloop.tests/testing-loops/test_cxxloop_typed/: test_cxxloop_typed.cpp
cxxloop/include/: cxxloop.h  cxxloop_postops.h  cxxloop_postops.h.bak  cxxloop_prereqs.h  loop  loop.h
future-cpp-loop/: INSTALL.txt  README.md  future-cpp-loop.pro  future-cpp-loop.sln  future-cpp-loop.vcxproj  future-cpp-loop.vcxproj.filters  the_project_directory.md
future-cpp-loop/ogis-cpp-loop/: ogis-cpp-loop.pro  ogis-cpp-loop.vcxproj  ogis-cpp-loop.vcxproj.filters
future-cpp-loop/ogis-cpp-loop.examples/: README.md  ogis-cpp-loop.examples.pro  ogis-cpp-loop.examples.vcxproj  ogis-cpp-loop.examples.vcxproj.filters
future-cpp-loop/ogis-cpp-loop.examples/examples/: README.md  asciishapes.cpp  asciishapes.hpp  asciishapes_old_style.cpp  asciishapes_using_for.cpp  asciishapes_using_loop.cpp  example_matrix.cpp  main.cpp  matrix.cpp  matrix.hpp  matrix_io.hpp  tests_loops.cpp  tests_misc.cpp
future-cpp-loop/ogis-cpp-loop/include/: README.md  compound  cpploop.h  cppuniqueid  loop  the_header_only_implementation.md
future-cpp-loop/ogis-cpp-loop/include/ogis/cpp/: cppcompound.h  cpploop.h  cpploop_down.h  cpploop_up.h  cppuniqueid.h
future-cpp-loop/ogis-cpp-loop/includes/: compound
future-cpp-loop/ogis-cpp-loop/includes/ogis/cpp/: cppcompound.h  cpploop.h  cppuniqueid.h
future-cpp-loop/ogis-godbolt.examples/: README.md  loop-godbolt-001.cpp  ogis-godbolt.examples.pro  ogis-godbolt.examples.vcxproj  ogis-godbolt.examples.vcxproj.filters  ogis-loop-godbolt-001.cpp  ogis-loop-godbolt-002.cpp  ogis-loop-godbolt-example.cpp
talks/: README.md  talks-about-compound-group-LOOP.html
